# cursach2

./: README.md  main.py  pyproject.toml
src/: UI.py  api_work.py  file_work.py  vacancy.py
tests/: test_UI.py  test_api_work.py  test_file_work.py  test_vacancy.py
